yalnızca title ve h1 düzeltildi. cortexup yerine dört işlem oyunu yazıyordu

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
     <head>
       <meta charset="UTF-8">
-      <title>Canvas Üzerinde Çizim</title>
+      <title>CortexUP</title>
       <style>
         canvas {
           border: 1px solid #000;
@@ -11,7 +11,7 @@
       </style>
     </head>
     <body>
-        <h1>Dört İşlem Oyunu</h1>
+        <h1>CortexUP - Dört İşlem Oyunu</h1>
         <br>
         <h3>Aşağıda verilen matematiksel işlemin sonucunu çiziniz. Bu oyunun yapımında Brain Age oyunundan esinlenilmiştir.</h3>
         <h3>YZTA Hackathon 2025 için yapılmıştır. Grup-110 Mustafa Berke ÖZCAN</h3>
